--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "create-pull-request",
-  "version": "7.0.0",
+  "version": "8.0.0",
   "private": true,
   "description": "Creates a pull request for changes to your repository in the actions workspace",
   "main": "lib/main.js",
+  "engines": {
+    "node": ">=24.4.0"
+  },
   "scripts": {
     "build": "tsc && ncc build",
     "format": "prettier --write '**/*.ts'",
